--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,10 @@
-ansicolors==1.1.8
-ansiwrap==0.8.4
-asn1crypto==0.24.0
-chainmap==1.0.2
-combomethod==1.0.12
-cryptography==2.1.4
-enum34==1.1.6
-idna==2.6
-ipaddress==1.0.17
-keyring==10.6.0
-keyrings.alt==3.0
-mementos==1.3.1
-nulltype==2.3.1
-options==1.4.8
-pycairo==1.16.2
-pycrypto==2.6.1
-pygobject==3.26.1
-pyxdg==0.25
-say==1.6.5
-SecretStorage==2.3.1
-simplere==1.2.13
-six==1.11.0
-textwrap3==0.9.2
+dj-database-url==0.5.0
+Django==2.1.7
+django-redis==4.10.0
+djangorestframework==3.9.1
+gunicorn==19.9.0
+mysqlclient==1.4.2.post1
+psycopg2==2.7.7
+pytz==2018.9
+redis==3.2.1
+whitenoise==4.1.2
